--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AuthentificationActivity"></activity>
+        <activity android:name=".Vue.StartActivity" />
+        <activity android:name=".Vue.SignInActivity" />
+        <activity android:name=".Vue.MyListTripsActivity" />
+        <activity android:name=".Vue.HomeActivity" />
+        <activity android:name=".Vue.searchTripActivity" />
+        <activity android:name=".Vue.SuggestTripActivity"></activity>
     </application>
 
 </manifest>
