--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Vue.MainActivity">
+        <activity android:name=".Vue.StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,7 +18,6 @@
         <activity android:name=".Vue.ProfilActivity" />
         <activity android:name=".Vue.SearchResultActivity" />
         <activity android:name=".Vue.TripActivity"></activity>
-        <activity android:name=".Vue.StartActivity" />
         <activity android:name=".Vue.SignInActivity" />
         <activity android:name=".Vue.MyListTripsActivity" />
         <activity android:name=".Vue.HomeActivity" />
