fix image & profile

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".Vue.SearchTripActivity" android:theme="@style/MyTheme" />
         <activity android:name=".Vue.SuggestTripActivity" android:theme="@style/MyTheme"/>
         <activity android:name=".Vue.FormActivity" android:theme="@style/MyTheme" />
+        <activity android:name=".Vue.FormModificationActivity" android:theme="@style/MyTheme" />
     </application>
 
 </manifest>
